--- a/.gitignore
+++ b/.gitignore
@@ -157,6 +157,9 @@ cython_debug/
 # Ignores the keys directory
 keys/
 
+# Ignore Llama 2.7 model weights
+llama/
+
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
